Fixing bugs with title font and item vertical alignment

--- a/src/topcoat-navigation-bar.styl
+++ b/src/topcoat-navigation-bar.styl
@@ -34,8 +34,10 @@ Navigation Bar
   navigation-bar__item()
   margin var-margin
   line-height var-line-height--large
-  vertical-align baseline
+  vertical-align top
 
 .topcoat-navigation-bar__title
   navigation-bar__title()
+  font-size var-font-size--large
+  font-weight var-font-weight--large
 
